# sculptor

./: .gitignore  CREDITS  Cargo.toml  Config.example.toml  Config.toml  Dockerfile  README.md  README.ru.md  build.rs  docker-compose.example.yml  note.txt
.github/: release-body.md  release.yml
.github/actions/dependencies/: action.yml
.github/scripts/: compress-artifact.sh  package-artifacts.sh
.github/workflows/: ci.yml  dev-release.yml  docker.yml  release.yml  rust.yml
elyby-api/: Cargo.toml
elyby-api/src/: lib.rs
src/: auth.rs  config.rs  consts.rs  info.rs  main.rs  metrics.rs  profile.rs  utils.rs
src/api/: errors.rs  mod.rs
src/api/figura/: assets.rs  auth.rs  info.rs  mod.rs  profile.rs  websocket.rs
src/api/figura/types/: auth.rs  c2s.rs  mod.rs  s2c.rs
src/api/figura/websocket/: handler.rs  mod.rs  processor.rs
src/api/figura/websocket/types/: c2s.rs  errors.rs  mod.rs  s2c.rs  session.rs
src/api/sculptor/: http2ws.rs  mod.rs  users.rs
src/api/v1/: auth.rs  avatars.rs  http2ws.rs  mod.rs  types.rs  users.rs
src/auth/: auth.rs  mod.rs  types.rs
src/state/: config.rs  mod.rs  state.rs
src/utils/: auxiliary.rs  check_updates.rs  mod.rs  motd.rs  utils.rs
src/ws/: c2s.rs  errors.rs  handler.rs  http.rs  mod.rs  s2c.rs  websocket.rs
src/ws/types/: c2s.rs  mod.rs  s2c.rs
