[package]
name = "sculptor"
authors = ["Shiroyashik <shiroyashik@shsr.ru>"]
version = "0.4.0-dev"
edition = "2021"
publish = false

[dependencies]
# Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing = "0.1.40"

# Errors handelers
anyhow = "1.0.83"
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["now", "serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.13"

# Other
dashmap = { version = "6.0.1", features = ["serde"] }
hex = "0.4.3"
uuid = { version = "1.8.0", features = ["serde"] }
base64 = "0.22.1"
reqwest = { version = "0.12.6", features = ["json"] }
dotenvy = "0.15.7"
semver = "1.0.23"
walkdir = "2.5.0"

# Crypto
ring = "0.17.8"
rand = "0.8.5"

# Web framework
axum = { version = "0.7.5", features = ["ws", "macros", "http2"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tokio = { version = "1.37.0", features = ["full"] }
indexmap = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
cross = "0.2.5"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
