[package]
name = "sculptor"
authors = ["Shiroyashik <shiroyashik@shsr.ru>"]
version = "0.4.0-dev"
edition = "2021"
publish = false

[dependencies]
# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
tracing-panic = "0.1"
tracing = "0.1"

# Errors handelers
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["now", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Other
dashmap = { version = "6.0", features = ["serde"] }
faster-hex = "0.10"
uuid = { version = "1.11", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
semver = "1.0"
walkdir = "2.5"
indexmap = { version = "2.6", features = ["serde"] }
zip = "2.2"
lazy_static = "1.5"
notify = "7.0"

# Crypto
ring = "0.17"
rand = "0.8"

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "http2"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1.41", features = ["full"] }

[dev-dependencies]
cross = "0.2.5"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
