[package]
name = "sculptor"
authors = ["Shiroyashik <shiroyashik@shsr.ru>"]
version = "0.4.1-dev"
edition = "2024"
publish = false

[dependencies]
# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
tracing-panic = "0.1"
tracing = "0.1"

# Errors handelers
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["now", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Other
dashmap = { version = "6.0", features = ["serde"] }
faster-hex = "0.10"
uuid = { version = "1.11", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dotenvy = "0.15"
semver = "1.0"
walkdir = "2.5"
indexmap = { version = "2.6", features = ["serde"] }
zip = "2.2"
notify = "8.0"

# Crypto
ring = "0.17"
rand = "0.9"

# Web
axum = { version = "0.8", features = ["ws", "macros", "http2"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1.41", features = ["full"] }
prometheus = { version = "0.13.4", features = ["process"] }